force-app/main/default/objects/Customer__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>Billing City</label>
    <type>Text</type>
    <length>100</length>
</CustomField>