force-app/main/default/objects/Customer__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <label>Customer Number</label>
    <type>AutoNumber</type>
    <displayFormat>C-{00000000}</displayFormat>
</CustomField>